--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "eslint-plugin-react-hooks": "^4.5.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-config-standard-with-typescript": "^21.0.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-standard": "^5.0.0",
     "prettier": "^2.6.2"
   },
   "peerDependencies": {
